# fvm

./: .gitignore  CMakeLists.txt  README.md
L3/: CMakeLists.txt
L3/cloned/: boundary_cell.c  input.c  pointer_init.h
L3/reorder0/: Makefile  input.c  input.h  main.c  mc.h  pcg.h  pcg_ext.h  poi_gen.c  sequential.c  sequential.h  solver_ICCG_mc.c  solver_ICCG_mc.h
L3/run/: Makefile  all-rest.sh  all-sleep.sh  all.sh  combine.sh  go0-1.sh  go0-10.sh  go0-11.sh  go0-12.sh  go0-13.sh  go0-14.sh  go0-15.sh  go0-16.sh  go0-17.sh  go0-18.sh  go0-19.sh  go0-2.sh  go0-20.sh  go0-21.sh  go0-22.sh  go0-23.sh  go0-24.sh  go0-25.sh  go0-26.sh  go0-27.sh  go0-28.sh  go0-29.sh  go0-3.sh  go0-30.sh  go0-31.sh  go0-32.sh  go0-33.sh  go0-34.sh  go0-35.sh  go0-36.sh  go0-4.sh  go0-5.sh  go0-6.sh  go0-7.sh  go0-8.sh  (+122 more)
L3/src/: Makefile  cmrcm.c  outucd.h  solver_ICCG_mc.c
L3/src0/: Makefile  cmrcm.h  input.c  main.c  poi_gen.c  solver_ICCG_mc.c
L3/srcx/: Makefile  allocate.h  boundary_cell.h  mc.c  pcg_ext.h  poi_gen.h  pointer_init.c  solver_ICCG_mc.c  struct.h  struct_ext.h
multicore-c/L1/run/: mg.c  mg.f
multicore-c/L1/src/: Makefile  input.c  input.h  main.c  outucd.c  pcg.h  poi_gen.c  solver_ICCG.c  solver_ICCG.c.1  solver_ICCG.c.2  solver_ICCG.h  solver_PCG.c  solver_PCG.h  struct.h  struct_ext.h
multicore-c/L2/coloring/src/: Makefile  cm.c  cmrcm.c  main.c  mc.c  outucd.c  pcg.h  pcg_ext.h  poi_gen.c  poi_gen.h  pointer_init.c  rcm.c  struct.h  struct_ext.h
multicore-c/L2/solver/src/: Makefile  allocate.c  cm.c  cm.h  cmrcm.c  main.c  mc.c  pcg_ext.h  poi_gen.c  solver_ICCG_mc.c  solver_ICCG_mc.h
multicore-f/L1/run/: lu1.f  lu2.f
multicore-f/L1/src/: Makefile  boundary_cell.f  cell_metrics.f  input.f  main.f  pcg.f  poi_gen.f  precision.inc  solver_ICCG.f  solver_ICCG2.f  solver_PCG.f
multicore-f/L2/coloring/run/: color.inp
multicore-f/L2/coloring/src/: Makefile  cm.f  cmrcm.f  main.f  outucd.f  pcg.f  poi_gen.f  pointer_init.f  rcm.f  struct.f
multicore-f/L2/solver/run/: INPUT.DAT~
multicore-f/L2/solver/src/: Makefile  cm.f  input.f  main.f  mc.f  outucd.f  part.f  pcg.f  poi_gen.f  pointer_init.f  rcm.f  solver_ICCG_mc.f
omp/run/: gg.sh  go.sh  go1.sh  go2.sh  test18.lst
omp/src20/: Makefile  cell_metrics.c  cell_metrics.h  input.c  main.c  pcg.h  poi_gen.c  rcm.c  rcm.h  solver_PCG.c  solver_PCG.h
stream/: impimap.sh  s01.sh  s16.sh  s32.sh  s36.sh  stream.f
